--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </p>
                 </article>
                 <img
-                    srcset="./imgs/5360846_Credit-card500w.avif 500w, ./imgs/5360846_Credit-card500w.webp 500w, ./imgs/5360846_Credit-card.avif 1000w , ./imgs/5360846_Credit-card.webp 1000w, imgs/5360846_Credit-card.jpg 1000w"
+                    srcset="./imgs/5360846_Credit-cardw350.webp 350w, imgs/5360846_Credit-cardw450.webp 450w, ./imgs/5360846_Credit-card.webp 1000w, imgs/5360846_Credit-card.jpg 1000w"
                     src="./imgs/5360846_Credit-card.jpg"
                     alt="credit card" 
                     width="1000"
