edit: improve accessibility

--- a/apply.html
+++ b/apply.html
@@ -39,15 +39,17 @@
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <div class="buttons" style="margin: 0 0.5rem">
-                <button id="open-sidebar" aria-label="menu"> <svg xmlns="http://www.w3.org/2000/svg" width="24"
+            <figure class="buttons" style="margin: 0 0.5rem">
+                <button id="open-sidebar" aria-label="menu"> 
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24"
                         height="24" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu">
                         <line x1="3" y1="12" x2="21" y2="12"></line>
                         <line x1="3" y1="6" x2="21" y2="6"></line>
                         <line x1="3" y1="18" x2="21" y2="18"></line>
-                    </svg></button>
-            </div>
+                    </svg>
+                </button>
+            </figure>
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
@@ -67,7 +69,7 @@
         </header>
         <!--END OF HEADER-->
         <article class="application" aria-label="application form">
-            <div class="container">
+            <figure class="container">
                 <h2>Application Form</h2>
                 <form action="application form" method="post">
                     <fieldset>
@@ -126,7 +128,7 @@
                         value="submit">
                     </label>
                 </form>
-            </div>
+            </figure>
         </article>
         <!--END OF APPLICATION FORM-->
         <footer id="footer" aria-label="footer">
