--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <div class="buttons" style="margin: 0 0.5rem">
+            <figure class="buttons" style="margin: 0 0.5rem">
                 <button id="open-sidebar" aria-label="menu"> <svg xmlns="http://www.w3.org/2000/svg" width="24"
                         height="24" viewBox="0 0 24 24" fill="none" stroke="#E0E6EB" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu">
@@ -50,7 +50,7 @@
                         <line x1="3" y1="18" x2="21" y2="18"></line>
                     </svg>
                 </button>
-            </div>
+            </figure>
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
@@ -70,7 +70,7 @@
         </header>
         <!--END OF HEADER-->
         <section id="contact" class="contact" aria-label="contact">
-            <div class="container">
+            <figure class="container">
                 <form action="contact-form" aria-label="contact-form">
                     <fieldset>
                         <legend>
@@ -91,7 +91,7 @@
                             </label>
                         </legend>
                     </fieldset>
-                    <label for="submit" class="label4"><input type="submit" id="submit" value="Send Message"
+                    <label for="submit" class="label4" title="label for submit"><input type="submit" id="submit" value="Send Message"
                         aria-label="click button">
                     </label>
                 </form>
@@ -99,7 +99,7 @@
                 <aside aria-label="aside">
                     <h3>Contact Information</h3>
                     <p>How can we help?</p>
-                    <div class="info">
+                    <figure class="info">
                         <article aria-label="article">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="#05141A" stroke-width="2" stroke-linecap="round"
@@ -108,10 +108,10 @@
                                 </path>
                                 <polyline points="22,6 12,13 2,6"></polyline>
                             </svg>
-                            <div class="details">
+                            <figure class="details">
                                 <h4>Email</h4>
                                 <p>info@logo.com</p>
-                            </div>
+                            </figure>
                         </article>
                         <article aria-label="article">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -120,11 +120,11 @@
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                                 <circle cx="12" cy="10" r="3"></circle>
                             </svg>
-                            <div class="details">
+                            <figure class="details">
                                 <h4>Location</h4>
                                 <p>748 Grove Street</p>
                                 <p>Atlanta, Georgia 30144</p>
-                            </div>
+                            </figure>
                         </article>
                         <article aria-label="article">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -134,15 +134,15 @@
                                     d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
                                 </path>
                             </svg>
-                            <div class="details">
+                            <figure class="details">
                                 <h4>Telephone</h4>
                                 <p>Weekdays 8am-5pm</p>
                                 <p>(404) 000-0001</p>
-                            </div>
+                            </figure>
                         </article>
-                    </div>
+                    </figure>
                 </aside>
-            </div>
+            </figure>
             <!--END OF ASIDE INFORMATION-->
         </section>
         <footer id="footer" aria-label="footer">
