--- a/signin.html
+++ b/signin.html
@@ -41,7 +41,7 @@
                 </ul>
             </bento-sidebar>
             <!--SIDEBAR CONTROL-->
-            <div class="buttons" style="margin: 0 0.5rem">
+            <figure class="buttons" style="margin: 0 0.5rem">
                 <button id="open-sidebar" aria-label="menu">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="#E0E6EB" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -51,7 +51,7 @@
                         <line x1="3" y1="18" x2="21" y2="18"></line>
                     </svg>
                 </button>
-            </div>
+            </figure>
             <a href="index.html" class="logo1" aria-label="logo">LOGO</a>
         </nav>
         <!--END OF MOBILE NAV-->
@@ -71,7 +71,7 @@
         </header>
         <!--END OF HEADER-->
         <article class="sign-in" aria-label="sign in form">
-            <div class="container">
+            <figure class="container">
                 <form action="sign in" method="post">
                     <fieldset>
                         <legend class="signin-legend">
@@ -128,7 +128,7 @@
                         </legend>
                     </fieldset>
                 </form>
-            </div>
+            </figure>
             <!--END OF SIGN IN FORM-->
         </article>
         <!--END OF SIGN IN SECTION-->
