--- a/index.html
+++ b/index.html
@@ -406,12 +406,14 @@
                     <h3 class="footer-title">Stay Informed</h3>
                     <p>Subscribe to our mailing list.</p>
                     <form action="newsletter" aria-label="signup">
-                        <label for="email" class="label" title="email label"><input id="email" type="email" name="email"
-                                placeholder="Enter your email" required="valid email" aria-label="enter your email"
-                                autocomplete="email">
+                        <label for="email" class="label"><input id="email" type="email" name="email"
+                            placeholder="Enter your email" required="valid email" aria-label="enter your email"
+                            autocomplete="email" title="email label"
+                        >
                         </label>
-                        <label for="submit_button" title="submit label"><input type="submit" id="submit_button"
-                                value="Subscribe"></label>
+                        <label for="submit_button"><input type="submit" id="submit_button"
+                            value="Subscribe" title="submit label">
+                        </label>
                     </form>
                 </article>
             </section>
