--- a/apply.html
+++ b/apply.html
@@ -167,11 +167,11 @@
                     <h3 class="footer-title">Stay Informed</h3>
                     <p>Subscribe to our mailing list.</p>
                     <form action="newsletter" aria-label="signup">
-                        <label for="current-email" class="label"><input id="current-email" type="email" name="email"
+                        <label for="current-email" class="label" aria-labelledby="current-email"><input id="current-email" type="email" name="email"
                             placeholder="Enter Email" required="valid email" aria-label="enter your email"
                             autocomplete="email">
                         </label>
-                        <label for="submit_button"><input type="submit" id="submit_button" value="Subscribe"></label>
+                        <label for="submit_button" aria-labelledby="submit_button"><input type="submit" id="submit_button" value="Subscribe"></label>
                     </form>
                 </article>
             </section>
