--- a/contact.html
+++ b/contact.html
@@ -181,11 +181,11 @@
                     <h3 class="footer-title">Stay Informed</h3>
                     <p>Subscribe to our mailing list.</p>
                     <form action="newsletter" aria-label="signup">
-                        <label for="signup-email" class="label"><input id="signup-email" type="email"
+                        <label for="signup-email" class="label" aria-labelledby="signup-email"><input id="signup-email" type="email"
                             placeholder="Enter your email" required="valid email" aria-label="placeholder text"
                             autocomplete="email">
                         </label>
-                        <label for="submit-label"><input type="submit" id="submit-label" value="Subscribe"
+                        <label for="submit-label" aria-labelledby="submit-label"><input type="submit" id="submit-label" value="Subscribe"
                             aria-label="submit button">
                         </label>
                     </form>
