--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <h2>Credit Cards</h2>
             <figure class="container">
                 <figure class="creditcard">
-                    <a href="apply.html">
+                    <a href="apply.html" alt="apply">
                         <article>
                             <picture class="image">
                                 <source srcset="./imgs/pexels-rodnae-productions-7821482.avif" type="image/avif">
@@ -243,7 +243,7 @@
                 </figure>
                 <!--END OF FIRST CREDIT CARD-->
                 <figure class="creditcard">
-                    <a href="apply.html">
+                    <a href="apply.html" alt="apply">
                         <article>
                             <picture class="image">
                                 <source srcset="./imgs/pexels-skitterphoto-332304.avif" type="image/avif">
@@ -267,7 +267,7 @@
                 </figure>
                 <!--END OF SECOND CREDIT CARD-->
                 <figure class="creditcard">
-                    <a href="apply.html">
+                    <a href="apply.html" alt="apply">
                         <article>
                             <picture class="image">
                                 <source srcset="./imgs/pexels-rodnae-productions-7821679.avif" type="image/avif">
@@ -292,7 +292,7 @@
                 </figure>
                 <!--END OF THIRD CREDIT CARD-->
                 <figure class="creditcard">
-                    <a href="apply.html">
+                    <a href="apply.html" alt="apply">
                         <article>
                             <picture class="image">
                                 <source srcset="./imgs/markus-winkler-DJoG5GsXfMw-unsplash.avif" type="image/avif">
@@ -318,7 +318,7 @@
                 </figure>
                 <!--END OF FOURTH CREDIT CARD-->
                 <figure class="creditcard">
-                    <a href="apply.html">
+                    <a href="apply.html" alt="apply">
                         <article>
                             <picture class="image">
                                 <source srcset="./imgs/dmitry-demidko-z4VuRg-ZOEg-unsplash.avif" type="image/avif">
@@ -343,7 +343,7 @@
                 </figure>
                 <!--END OF FIFTH CREDIT CARD-->
                 <figure class="creditcard">
-                    <a href="apply.html">
+                    <a href="apply.html" alt="apply">
                         <article>
                             <picture class="image">
                                 <source srcset="./imgs/markus-winkler-ahjzVINkuCs-unsplash.avif" type="image/avif">
@@ -406,13 +406,12 @@
                     <h3 class="footer-title">Stay Informed</h3>
                     <p>Subscribe to our mailing list.</p>
                     <form action="newsletter" aria-label="signup">
-                        <label for="email" class="label"><input id="email" type="email" name="email"
+                        <label for="email" class="label" aria-labelledby="email"><input id="email" type="email" name="email"
                             placeholder="Enter your email" required="valid email" aria-label="enter your email"
-                            autocomplete="email" title="email label"
-                        >
+                            autocomplete="email" >
                         </label>
-                        <label for="submit_button"><input type="submit" id="submit_button"
-                            value="Subscribe" title="submit label">
+                        <label for="submit_button" aria-labelledby="submit_button"><input type="submit" id="submit_button"
+                            value="Subscribe">
                         </label>
                     </form>
                 </article>
