--- a/signin.html
+++ b/signin.html
@@ -168,11 +168,11 @@
                     <h3 class="footer-title">Stay Informed</h3>
                     <p>Subscribe to our mailing list.</p>
                     <form action="newsletter" aria-label="signup">
-                        <label for="email" class="label"><input id="email" type="email" name="email"
+                        <label for="email" class="label" aria-labelledby="email"><input id="email" type="email" name="email"
                             placeholder="Enter your email" required="valid email" aria-label="enter your email"
                             autocomplete="email">
                         </label>
-                        <label for="submit_button"><input type="submit" id="submit_button" value="Subscribe"></label>
+                        <label for="submit_button" aria-labelledby="submit_button"><input type="submit" id="submit_button" value="Subscribe"></label>
                     </form>
                 </article>
             </section>
